added builder pattern structure to all modules for using parameters throughout